破坏性更新：切换到 jre 22，允许 linux-arm64 运行，移除 skija 库